# lean-ai-detector

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test.py
.github/workflows/: container_build_publish.yaml  publish_docs.yaml
data/: upload_data.py
deployment/: Dockerfile  requirements.txt
deployment/app/: main.py
docs/: index.md
models/: hf_upload.py  onnx_conversion.py  onnx_quantization.py  predict.py  test_onnx_quant.py  train.py  utils.py
notebooks/: splits.ipynb  test.ipynb  train.ipynb
