[tool.poetry]
name = "lean-ai-detector"
version = "0.1.0"
description = "Lean AI detection suite."
authors = ["ameen-91 <mohammedameen9011@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.44.2"
torch = "^2.4.1"
peft = "^0.12.0"
pandas = "^2.2.2"
evaluate = "^0.4.3"
scikit-learn = "^1.5.2"
wandb = "^0.18.1"
onnx = "^1.16.2"
onnxruntime = "^1.19.2"
optimum = "^1.22.0"
fastapi = {extras = ["standard"], version = "^0.115.0"}


[tool.poetry.group.dev.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.26.1"}
mkdocs-material = "^9.5.34"
ruff = "^0.6.5"
mkdocs = {extras = ["python"], version = "^1.6.1"}
pyyaml = "^6.0.2"
ipykernel = "^6.29.5"
nltk = "^3.9.1"
minio = "^7.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
